<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_surface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_16"
        android:background="@drawable/bg_app_card"
        android:elevation="@dimen/dim_2"
        android:outlineProvider="background"
        android:orientation="vertical"
        android:padding="@dimen/dim_18">

        <TextView
            android:id="@+id/theorySettingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theory_settings"
            android:textColor="@color/theory_text_primary"
            android:textSize="@dimen/text_26"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/theorySettingsDisclaimerHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16"
            android:text="@string/theory_disclaimer_heading"
            android:textColor="@color/theory_text_primary"
            android:textSize="@dimen/text_17"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/theorySettingsDisclaimerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_6"
            android:text="@string/theory_disclaimer_text"
            android:textColor="@color/theory_text_secondary"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/theorySettingsAttributionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16"
            android:text="@string/theory_attribution_heading"
            android:textColor="@color/theory_text_primary"
            android:textSize="@dimen/text_17"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/theorySettingsAttributionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_6"
            android:text="@string/theory_attribution_text"
            android:textColor="@color/theory_text_secondary"
            android:textSize="@dimen/text_14" />
    </LinearLayout>
</ScrollView>
